--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">week1</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">Near Me</string>
     <string name="action_settings">Settings</string>
+    <string name="comment1">comment1</string>
+    <string name="comment2">comment2</string>
+    <string name="username">username</string>
+    <string name="timestamp">timestamp</string>
 
 </resources>
