fixing some wrong layouts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="comment2">comment2</string>
     <string name="username">username</string>
     <string name="timestamp">timestamp</string>
+    <string name="cancel">cancel</string>
 
 </resources>
