full implemeted like count logic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="username">username</string>
     <string name="timestamp">timestamp</string>
     <string name="cancel">cancel</string>
+    <string name="likes_count">likes_count</string>
 
 </resources>
